--- a/assignment3/LSH.ipynb
+++ b/assignment3/LSH.ipynb
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write the results to submissions.csv file and get the score"
+    "## Write the nearest neibhors of each document to submissions.csv (comma separated, first column is the current document followed by a list of nearest neighbors) file and get the score"
    ]
   },
   {
