--- a/assignment3/LSH.ipynb
+++ b/assignment3/LSH.ipynb
@@ -61,10 +61,10 @@
    "metadata": {},
    "source": [
     "## Convert n-grams into binary vector representation for each document. You can do some optimzations if the matrix is too big.\n",
-    "For example, \n"
-    "* Select top 10000 most frequent n-grams.\n"
-    "* You may also try smaller values of n (like 2 or 3) which result in fewer n-grams.\n"
-    "* Finally, you can also try sparse matrix representation. Like csr_matrix from  scipy.sparse"
+    "For example, \n",
+    "* Select top 10000 most frequent n-grams.\n",
+    "* You may also try smaller values of n (like 2 or 3) which result in fewer n-grams.\n",
+    "* Finally, you can also try sparse matrix representation. Like csr_matrix from  scipy.sparse."
    ]
   },
   {
