--- a/assignment3/LSH.ipynb
+++ b/assignment3/LSH.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import json\n",
-    "from nltk import ngrams\n",
-    "from datasketch.experimental.aio.lsh import AsyncMinHashLSH\n",
-    "from datasketch import MinHash, MinHashLSH"
+    "from nltk import ngrams\n"
    ]
   },
   {
